k8s/base/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: app
spec:
  parentRefs:
    - name: app
  rules:
    - backendRefs:
        - name: app
          port: 8080
